# Mimir

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  PRINCIPLES.md  README.md  RELEASING.md  SECURITY.md  STATUS.md  WORKFLOW.md  bench  deny.toml  rust-toolchain.toml  rustfmt.toml
.agents/specs/2026-04-29-parallel-handoff-closeout/: SPEC.md
.agents/specs/2026-04-29-realignment-handoff/: SPEC.md
.agents/specs/2026-04-29-repo-audit/: SPEC.md
.agents/specs/2026-04-30-green-room-product-evaluation/: EVALUATION.md  ROADMAP.md  VERIFICATION.md
.agents/specs/2026-04-30-remove-launch-posting-plan-references/: SPEC.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  spec_question.md
.github/workflows/: ci.yml  release.yml
.planning/: README.md
.planning/planning/: 2026-04-19-roadmap-to-prime-time.md  2026-04-20-mission-scope-and-recovery-benchmark.md  2026-04-20-render-surface-audit.md  2026-04-21-rolls-royce-engineering-plan.md  2026-04-24-claude-codex-harness-integration-research.md  2026-04-24-current-handoff.md  2026-04-24-transparent-agent-harness.md  2026-04-27-cold-start-rehydration-protocol.md  2026-04-28-memory-product-gap-scan.md  2026-04-28-publication-readiness-and-channels.md
benchmarks/recovery/: README.md  SCORING.md  test_bench.py
benchmarks/recovery/scenarios/: 01-example-session-context-loss.json  01-example-session-context-loss.md  02-fresh-machine-recovery.json  02-fresh-machine-recovery.md  03-native-adapter-drift.json  04-consensus-quorum-handoff-loss.json
crates/mimir-cli/: Cargo.toml  README.md
crates/mimir-cli/src/: lib.rs  main.rs
crates/mimir-cli/tests/: parse_subcommand.rs  round_trip.rs
crates/mimir-core/: Cargo.toml  README.md
crates/mimir-core/benches/: read_path.rs
crates/mimir-core/src/: bind.rs  canonical.rs  clock.rs  confidence.rs  dag.rs  decay.rs  inference_methods.rs  lex.rs  lib.rs  log.rs  memory_kind.rs  parse.rs  pipeline.rs  read.rs  resolver.rs  semantic.rs  source_kind.rs  store.rs  symbol.rs  value.rs  workspace.rs  workspace_lock.rs
crates/mimir-core/tests/: decay_integration.rs  doc_drift_tests.rs  observability.rs  properties.proptest-regressions  properties.rs  workspace_lock.rs
crates/mimir-harness/: Cargo.toml  README.md
crates/mimir-harness/src/: lib.rs  main.rs
crates/mimir-harness/tests/: arg_parse.rs  binary.rs  bootstrap.rs  recovery_benchmark.rs
crates/mimir-librarian/: Cargo.toml  README.md
crates/mimir-librarian/src/: config.rs  copilot_session_store.rs  drafts.rs  error.rs  lib.rs  llm.rs  main.rs  processor.rs  quorum.rs  runner.rs  test_tracing.rs  validator.rs
crates/mimir-librarian/src/prompts/: system_prompt.md
crates/mimir-librarian/tests/: adversarial_corpus.rs  processor_observability.rs
crates/mimir-librarian/tests/fixtures/: adversarial_corpus.json
crates/mimir-mcp/: Cargo.toml  README.md
crates/mimir-mcp/src/: lib.rs  main.rs  server.rs
crates/mimir-mcp/tests/: binary.rs  end_to_end.rs  read_tools.rs  tool_catalog_drift.rs  write_tools.rs
docs/: README.md  attribution.md  bc-dr-restore.md  first-run.md  launch-posting-plan.md  launch-readiness.md  observability.md  sanitisation.md
docs/blog/: 2026-04-28-agent-memory-compiler-pipeline.md
docs/concepts/: README.md  confidence-decay.md  consensus-quorum.md  decoder-tool-contract.md  episode-semantics.md  grounding-model.md  ir-canonical-form.md  ir-write-surface.md  librarian-pipeline.md  memory-type-taxonomy.md  read-protocol.md  scope-model.md  symbol-identity-semantics.md  temporal-model.md  wire-architecture.md  workspace-model.md  write-protocol.md
docs/integrations/: claude-code-hook.md  claude-desktop-config.md
docs/planning/: 2026-04-19-roadmap-to-prime-time.md  2026-04-20-delivery-plan.md  2026-04-21-rolls-royce-engineering-plan.md  2026-04-24-current-handoff.md  2026-04-24-multi-agent-memory-control-plane.md  2026-04-27-progressive-recall-ladder.md  2026-04-27-public-readiness.md
docs/research/: 2026-04-20-llm-fluency-cc-baseline.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/fuzz_lex/: seed_01_semantic.txt  seed_06_flag.txt
fuzz/corpus/fuzz_parse/: seed_02_episodic.txt  seed_03_procedural.txt  seed_04_inferential.txt  seed_05_episode_meta.txt
fuzz/fuzz_targets/: fuzz_decoder.rs  fuzz_lex.rs  fuzz_parse.rs
plugins/mimir/: README.md  marketplace-entry.example.json
plugins/mimir/.codex-plugin/: plugin.json
plugins/mimir/skills/mimir-memory/: SKILL.md
research/librarian/: ITER2_FINDINGS.md  ITER3_FINDINGS.md  README.md  real_drafts.jsonl  sample_drafts.jsonl
research/llm-fluency/: README.md  corpus.jsonl  few_shot_examples.jsonl  run_benchmark.py  run_benchmark_cc.py  verify_corpus.py
research/recovery-benchmark/: README.md  SCORING.md  test_bench.py
research/recovery-benchmark/scenarios/: 01-example-session-context-loss.json  03-native-adapter-drift.json  03-native-adapter-drift.md  04-consensus-quorum-handoff-loss.json  04-consensus-quorum-handoff-loss.md
scripts/: bcdr-drill.sh
